# 2021-winter-co-op

./: README.md  main_class_sub.py  subscriber.py
etc/: Co-op 연구 진행 계획.pptx
lidar_code/: 4p.py  camera.py  convexhullmain.py  kalmanFilter.py  main.py  main2.py  maincpy.py  open3d_test.py  perspective_viewpoint_600x900.json  tracker.py  tracker2.py
lidar_code/01.05/: main_class.py  main_class_save_01.04.py  temp.py  tracker (copy).py  tracker_bef_reshape
lidar_code/initial/: main roi.py  main.py  main3_pcd.py  new_main.py  path_module.py  scratch.py
lidar_code/rulebase_lidar(using)/: kalmanFilter.py  main.py  main_class.py  point2numpy.py  scratch.py  tracker.py
mot_radar/: package.xml  setup.cfg  setup.py
mot_radar/mot_radar/: camera.py  kalmanFilter copy.py  main_class.py  main_class_sub.py  open3d_test.py  pngtoavi.py  radar_sub.py  test.py  top_viewpoint_600x900.json  tracker.py  util.py  vis_example.py
mot_radar/mot_radar/custom_msgs/: CMakeLists.txt
mot_radar/mot_radar/custom_msgs/msg/: AroundPaths.msg  CamToDM.msg  DetectToDM.msg  IMUOut.msg  NiroCAN1280.msg  NiroCAN1312.msg  NiroCAN1552.msg  NiroCAN1553.msg  NiroCAN1568.msg  NiroCAN512.msg  NiroCAN528.msg  NiroCAN560.msg  NiroCAN576.msg  NiroCAN608.msg  NiroCAN896.msg  ObjectCurrent.msg  ObjectInter.msg  Paths.msg  PathsMultiArray.msg  PointLabelMsg.msg  SaveCAN1808.msg  SaveCAN1809.msg  SaveCAN1811.msg  SaveCAN343.msg  SaveCAN521.msg  SaveRadarCAN256.msg  SaveRadarCAN257.msg  SaveRadarCAN261.msg  SaveRadarCAN264.msg  SaveRadarCAN265.msg  SaveRadarCAN33.msg  SaveRadarCAN34.msg  SaveRadarCAN368.msg  SaveRadarCAN369.msg  SaveRadarCAN371.msg  SaveRadarCAN372.msg  SaveRadarCAN373.msg  SbgCAN256.msg  SbgCAN257.msg  SbgCAN258.msg  (+14 more)
mot_radar/mot_radar/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mot_radar/mot_radar/install/custom_msgs/include/custom_msgs/msg/: adr_all_status.h  adr_all_status.hpp  around_paths.h  around_paths.hpp  array.h  array.hpp  cam_to_dm.h  cam_to_dm.hpp  curve_fit.h  curve_fit.hpp  debug_raw_array.h  debug_raw_array.hpp  detect_to_dm.h  detect_to_dm.hpp  gps_out.h  gps_out.hpp  imu_out.h  imu_out.hpp  lidar_msg.h  lidar_msg.hpp  niro_can1280.h  niro_can1280.hpp  niro_can1312.h  niro_can1312.hpp  niro_can1552.h  niro_can1552.hpp  niro_can1553.h  niro_can1553.hpp  niro_can1568.h  niro_can1568.hpp  niro_can1569.h  niro_can1569.hpp  niro_can272.h  niro_can272.hpp  niro_can304.h  niro_can304.hpp  niro_can368.h  niro_can368.hpp  niro_can512.h  niro_can512.hpp  (+306 more)
mot_radar/mot_radar/install/custom_msgs/include/custom_msgs/msg/detail/: adr_all_status__builder.hpp  adr_all_status__functions.h  adr_all_status__rosidl_typesupport_fastrtps_c.h  adr_all_status__rosidl_typesupport_fastrtps_cpp.hpp  adr_all_status__rosidl_typesupport_introspection_c.h  adr_all_status__rosidl_typesupport_introspection_cpp.hpp  adr_all_status__struct.h  adr_all_status__struct.hpp  adr_all_status__traits.hpp  adr_all_status__type_support.h  array__struct.h  (+1699 more)
mot_radar/mot_radar/install/custom_msgs/include/custom_msgs/srv/: get_bezier.h  get_bezier.hpp
mot_radar/mot_radar/install/custom_msgs/share/custom_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
mot_radar/mot_radar/install/custom_msgs/share/custom_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  custom_msgsConfig-version.cmake  custom_msgsConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
mot_radar/mot_radar/install/custom_msgs/share/custom_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
mot_radar/mot_radar/install/custom_msgs/share/custom_msgs/msg/: AdrAllStatus.idl  AdrAllStatus.msg  AroundPaths.idl  AroundPaths.msg  Array.idl  Array.msg  CamToDM.idl  CamToDM.msg  CurveFit.idl  CurveFit.msg  DebugRawArray.idl  DebugRawArray.msg  DetectToDM.idl  DetectToDM.msg  GPSOut.idl  GPSOut.msg  IMUOut.idl  IMUOut.msg  LidarMsg.idl  LidarMsg.msg  NiroCAN1280.idl  NiroCAN1280.msg  NiroCAN1312.idl  NiroCAN1312.msg  NiroCAN1552.idl  NiroCAN1552.msg  NiroCAN1553.idl  NiroCAN1553.msg  NiroCAN1568.idl  NiroCAN1568.msg  NiroCAN1569.idl  NiroCAN1569.msg  NiroCAN272.idl  NiroCAN272.msg  NiroCAN304.idl  NiroCAN304.msg  NiroCAN368.idl  NiroCAN368.msg  NiroCAN512.idl  NiroCAN512.msg  (+302 more)
mot_radar/mot_radar/install/custom_msgs/share/custom_msgs/srv/: GetBezier.idl  GetBezier.srv  GetBezier_Request.msg  GetBezier_Response.msg
mot_radar/mot_radar/install/save_hesai/lib/save_hesai/: fit_test  get_txt  save_hesai  save_hesai_test
mot_radar/mot_radar/install/save_hesai/share/save_hesai/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
mot_radar/mot_radar/log/: latest_build
mot_radar/mot_radar/save_hesai/: package.xml  setup.cfg  setup.py
mot_radar/mot_radar/save_hesai/save_hesai/: fit_test.py  get_txt.py  kalmanFilter.py  main_v1.py  main_v2.py  make_path.py  path_module.py  test.pcd  test.py  tracker.py
mot_radar/mot_radar/sub/: radar_sub10.py
(+13 files in other folders)
